--- a/css/slides.css
+++ b/css/slides.css
@@ -11,7 +11,7 @@
 .reveal { font-family: "Gill Sans", sans-serif; font-weight: normal; }
 
 .reveal section h1 { margin-bottom: 30px; font-size: 2.5em; }
-.reveal section.small-title h1 { font-size: 2.5em; }
+.reveal section.small-title h1 { font-size: 2em; }
 
 .reveal ul { display: block; margin-left: 1em; }
 
@@ -20,6 +20,7 @@
 .syntax pre { box-shadow: none; font-size: 1.2em; }
 .reveal img { max-height: 80%; }
 
+.reveal pre code { padding: 0; }
 .reveal section pre { box-shadow: none; }
 .small-code pre { font-size: 0.45em; }
 .big-code pre { font-size: 0.9em; box-shadow: none; }
